--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
         <div class="navbar-menu" id="navMenu">
             <div class="navbar-end">
                 {% if site.authors %}
-                <a class="navbar-item" href="{{ site.baseurl }}/authors/">简介</a>
+                <a class="navbar-item" href="{{ site.baseurl }}/authors/">关于</a>
                 {% endif %}
             </div>
         </div>
