--- a/_includes/post-item.html
+++ b/_includes/post-item.html
@@ -11,7 +11,7 @@
             <p>{{ post.excerpt | strip_html | strip_newlines | truncate: 200 }}</p>
         </div>
         <div class="has-text-centered">
-            <a href="{{ site.baseurl }}{{ post.url }}" class="button is-dark is-fullwidth">Read more</a>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="button is-dark is-fullwidth">查看详情</a>
         </div>
     </div>
 </div>
