--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -42,7 +42,7 @@ layout: default
                             <div class="content">
                                 {{ post.excerpt | strip_html | strip_newlines | truncate: 100 }}
                             </div>
-                            <a href="{{ post.url | prepend: site.baseurl }}" class="button is-dark is-fullwidth">Read more</a>
+                            <a href="{{ post.url | prepend: site.baseurl }}" class="button is-dark is-fullwidth">查看详情</a>
                         </div>
                     </div>
                     <p class="title"></p>
