--- a/_includes/post-item.html
+++ b/_includes/post-item.html
@@ -7,7 +7,7 @@
             <a href="{{ site.baseurl }}{{ post.url }}">
                 <p class="title is-4">{{ post.title}}</p>
             </a>
-            <p class="subtitle is-6">Published {{ post.date | date: "%b %-d, %Y" }} by {{ post.author }}</p>
+            <!-- <p class="subtitle is-6">Published {{ post.date | date: "%b %-d, %Y" }} by {{ post.author }}</p> -->
             <p>{{ post.excerpt | strip_html | strip_newlines | truncate: 200 }}</p>
         </div>
         <div class="has-text-centered">
