--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
 <div class="columns is-centered">
     <div class="column is-8-desktop is-10-tablet">
         <div class="content">
-            <p><strong>Published: {{ page.date | date: "%b %-d, %Y" }} by {{ page.author }}</strong></p>
+            <!-- <p><strong>Published: {{ page.date | date: "%b %-d, %Y" }} by {{ page.author }}</strong></p> -->
             {{ content }}
         </div>
 
